Updated product page layout, colors

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -12,14 +12,14 @@
 <body>
     <header>
     <nav>
-        <a id="logo" href="index.html"><img src="fs_logo.png" alt="logo"></a>
+        <a id="logo" href="index.html"><img src="logo_wht.png" alt="logo"></a>
         <a id = "howto">HOW-TO</a>
         <a id = "shop">SHOP</a>
-        <a id= "cart"><img src="cart.png" alt="cart"></a>
+        <a id= "cart"><img src="cart_wht.png" alt="cart"></a>
     </nav>
-    <img src="bar.png" alt="bar" id="bar">
+    <img src="bar_wht.png" alt="bar" id="bar">
     <section>
-        <div id="home-big">Make every <br>room cozy.</div>
+        <div id="home-big">Make every room cozy.</div>
         <br>
         <a href="fs_gallery.html" id="shop-button"><img src="home_shop_button.png" alt="home_shop_button"></a>
         <div id="home-med">Bespoke pillows for every room and every look.</div>
