--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -19,7 +19,7 @@
     </nav>
     <img src="bar_wht.png" alt="bar" id="bar">
     <section>
-        <div id="home-big">Make every room cozy.</div>
+        <div id="home-big">Make every <br> room cozy.</div>
         <br>
         <a href="fs_gallery.html" id="shop-button"><img src="home_shop_button.png" alt="home_shop_button"></a>
         <div id="home-med">Bespoke pillows for every room and every look.</div>
