after html validation

--- a/homework_5/fs_gallery.html
+++ b/homework_5/fs_gallery.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>Shop our products</title>
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="fs_gallery_style.css">
     <!-- fonts -->
@@ -29,7 +30,7 @@
     <br>
     <div class="c2">
         <h2 id="a">Swoon-worthy spaces</h2>
-        <a id="b"><img src="inspired button.png" alt="get inspired"></a>
+        <a id="b"><img src="inspired_button.png" alt="get inspired"></a>
     </div>
     <img src="inspo_thumb.png" alt="inspo rooms" id="inspo">
 </body>
