--- a/homework_5/fs_product.html
+++ b/homework_5/fs_product.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>Couch Pillows</title>
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="fs_product_styles.css">
     <!-- fonts -->
