js to product page

--- a/homework_6/fs_product.html
+++ b/homework_6/fs_product.html
@@ -27,23 +27,23 @@
     </header>
     <div id="pagegrid">
         <img src="productmain.png" alt="neon pillow" id="productmain">
-        <img src="thumb1.png" alt="thumb1" id="thumb1">
-        <img src="thumb2.png" alt="thumb2" id="thumb2">
-        <img src="thumb3.png" alt="thumb3" id="thumb3">
-        <img src="thumb4.png" alt="thumb4" id="thumb4">
+        <img src="thumb1.png" alt="thumb1" id="thumb1" class="selectable">
+        <img src="thumb2.png" alt="thumb2" id="thumb2" class="selectable">
+        <img src="thumb3.png" alt="thumb3" id="thumb3" class="selectable">
+        <img src="thumb4.png" alt="thumb4" id="thumb4" class="selectable">
         <div id="product">Couch Pillows</div>
         <div id="price">$25</div>
         <div id="choosecolor">Choose your color:</div>
         <div id="currentcolor">Current selection: Morning Haze</div>
-        <img src="color1.png" alt="morning haze" id="color1">
-        <img src="color2.png" alt="after school special" id="color2">
-        <img src="color3.png" alt="cozy denim" id="color3">
-        <img src="color4.png" alt="rainy day" id="color4">
+        <img src="thumb3.png" alt="morning haze" id="color1" class="selectable" onclick="selectColor(this)">
+        <img src="color2.png" alt="after school special" id="color2" class="selectable" onclick="selectColor(this)">
+        <img src="color3.png" alt="cozy denim" id="color3" class="selectable" onclick="selectColor(this)">
+        <img src="color4.png" alt="rainy day" id="color4" class="selectable" onclick="selectColor(this)">
         <div id="fill">Choose your fill:</div>
         <div id="currentfill">Current selection: Poly fill</div>
-        <img src="fill1.png" alt="poly" id="fill1">
-        <img src="fill2.png" alt="down" id="fill2">
-        <img src="fill3.png" alt="foam" id="fill3">
+        <img src="fill1.png" alt="poly" id="fill1" class="selectable" onclick="selectFill(this)">
+        <img src="fill2.png" alt="down" id="fill2" class="selectable" onclick="selectFill(this)">
+        <img src="fill3.png" alt="foam" id="fill3" class="selectable" onclick="selectFill(this)">
         <div id="aboutfill">
             ABOUT THIS FILL<br>
             <br>
