--- a/homework_6/fs_product.html
+++ b/homework_6/fs_product.html
@@ -27,10 +27,10 @@
     </header>
     <div id="pagegrid">
         <img src="productmain.png" alt="neon pillow" id="productmain">
-        <img src="thumb1.png" alt="thumb1" id="thumb1" class="selectable">
-        <img src="thumb2.png" alt="thumb2" id="thumb2" class="selectable">
-        <img src="thumb3.png" alt="thumb3" id="thumb3" class="selectable">
-        <img src="thumb4.png" alt="thumb4" id="thumb4" class="selectable">
+        <img src="thumb1.png" alt="thumb1" id="thumb1" class="selectable" onclick="selectThumb(this)">
+        <img src="thumb2.png" alt="thumb2" id="thumb2" class="selectable" onclick="selectThumb(this)">
+        <img src="thumb3.png" alt="thumb3" id="thumb3" class="selectable" onclick="selectThumb(this)">
+        <img src="thumb4.png" alt="thumb4" id="thumb4" class="selectable" onclick="selectThumb(this)">
         <div id="product">Couch Pillows</div>
         <div id="price">$25</div>
         <div id="choosecolor">Choose your color:</div>
