--- a/homework_6/fs_gallery.html
+++ b/homework_6/fs_gallery.html
@@ -16,7 +16,7 @@
             <a href="fs_gallery.html" id="bread_crumb">SHOP ALL</a>
             <a id = "howto">HOW-TO</a>
             <a id = "shop">SHOP</a>
-            <a id= "cart"><img src="cart.png" alt="cart"></a>
+            <a id= "cart" href = "fs_cart.html"><img src="cart.png" alt="cart"></a>
         </nav>
         <img src="bar.png" alt="bar" id="bar">
     </header>
