--- a/homework_6/fs_product.html
+++ b/homework_6/fs_product.html
@@ -20,7 +20,7 @@
             <a href="fs_product.html" id="bread_crumb2">COUCH</a>
             <a id = "howto">HOW-TO</a>
             <a id = "shop">SHOP</a>
-            <a id= "cart"><img src="cart.png" alt="cart"></a>
+            <a id= "cart" href = "fs_cart.html"><img src="cart.png" alt="cart"></a>
             <a id = "cart_qty"></a>
         </nav>
         <img src="bar.png" alt="bar" id="bar">
