--- a/homework_6/index.html
+++ b/homework_6/index.html
@@ -15,7 +15,7 @@
         <a id="logo" href="index.html"><img src="logo_wht.png" alt="logo"></a>
         <a id = "howto">HOW-TO</a>
         <a id = "shop">SHOP</a>
-        <a id= "cart"><img src="cart_wht.png" alt="cart"></a>
+        <a id= "cart" href = "fs_cart.html"><img src="cart_wht.png" alt="cart"></a>
     </nav>
     <img src="bar_wht.png" alt="bar" id="bar">
     <section>
