--- a/homework_6/fs_product.html
+++ b/homework_6/fs_product.html
@@ -34,13 +34,13 @@
         <div id="product">Couch Pillows</div>
         <div id="price">$25</div>
         <div id="choosecolor">Choose your color:</div>
-        <div id="currentcolor">Current selection: Morning Haze</div>
+        <div id="currentcolor">Color: Morning Haze</div>
         <img src="thumb3.png" alt="morning haze" id="color1" class="selectable" onclick="selectColor(this)">
         <img src="color2.png" alt="after school special" id="color2" class="selectable" onclick="selectColor(this)">
         <img src="color3.png" alt="cozy denim" id="color3" class="selectable" onclick="selectColor(this)">
         <img src="color4.png" alt="rainy day" id="color4" class="selectable" onclick="selectColor(this)">
         <div id="fill">Choose your fill:</div>
-        <div id="currentfill">Current selection: Poly fill</div>
+        <div id="currentfill">Fill: Poly</div>
         <img src="fill1.png" alt="poly" id="fill1" class="selectable" onclick="selectFill(this)">
         <img src="fill2.png" alt="down" id="fill2" class="selectable" onclick="selectFill(this)">
         <img src="fill3.png" alt="foam" id="fill3" class="selectable" onclick="selectFill(this)">
