--- a/homework_6/fs_cart.html
+++ b/homework_6/fs_cart.html
@@ -36,8 +36,9 @@
         </div>
         <div id = "cart_contents">
             <h1 id="yourcart">Your Cart</h1>
-            <div id="item1" class="item">
-                <button id="x1">x</button>
+            <div id="cart_list"></div>
+            <!-- <div id="item1" class="item">
+                <button id="x0">x</button>
                 <img id="img1" src="thumb1.png">
                  
                 <div id="name1">Couch pillow</div>
@@ -47,7 +48,7 @@
                 <div id="price1">$50</div>
                 <a id="qty1">Qty:   <input id='qtyattribute' type="text" name="qty" placeholder="2" size="4.9" value="0"></a>
                 <button id="update1">UPDATE</button>
-            </div>
+            </div> -->
             <!-- <div class = "item">
                 <button id="x1">x</button>
                 <img id="img1" src="cart_icon2.png">
