updated cart badge and shipping

--- a/homework_6/fs_product.html
+++ b/homework_6/fs_product.html
@@ -10,7 +10,7 @@
     <script src="product.js"></script>
 </head>
 
-<body>
+<body onload = "onLoad()">
     <header>
         <nav>
             <a id="logo" href="index.html"><img src="fs_logo.png" alt="logo"></a>
